--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
       "email": "me.masoudhosseini@gmail.com"
     }
   ],
-  "minimum-stability": "stable",
+  "minimum-stability": "dev",
   "autoload": {
     "psr-4": {
       "YourVendor\\YourPackageName\\": "src/"
