--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
     }
   },
   "require": {
-    "php": "^8.0",
-    "illuminate/support": "^8.0",
+    "php": "^7.3|^8.0",
+    "illuminate/support": "^7.0|^8.0",
     "guzzlehttp/guzzle": "^7.0.1"
   }
 }
