--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   "minimum-stability": "dev",
   "autoload": {
     "psr-4": {
-      "GraphqlRequester\\Core\\": "src/"
+      "GraphqlRequester\\": "src/"
     }
   },
   "require": {
