--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,20 @@
 {
-  "name": "me-masoud/graphql-requester",
-  "description": "request graphql anywhere",
-  "type": "library",
-  "license": "MIT",
-  "authors": [
-    {
-      "name": "Masoud Hosseini",
-      "email": "me.masoudhosseini@gmail.com"
-    }
-  ],
-  "minimum-stability": "dev",
-  "autoload": {
-    "psr-4": {
-      "GraphqlRequester\\": "src/"
-    }
-  },
-  "require": {
-    "php": "^7.3|^8.0",
-    "guzzlehttp/guzzle": "^7.0.1"
-  }
+    "name": "masoud/graphql-requester",
+    "type": "library",
+    "require": {
+        "guzzlehttp/guzzle": "7.8.x-dev"
+    },
+    "license": "MIT",
+    "autoload": {
+        "psr-4": {
+            "Masoud\\GraphqlRequester\\": "src/"
+        }
+    },
+    "authors": [
+        {
+            "name": "Masoud",
+            "email": "me.masoudhosseini@gmail.com"
+        }
+    ],
+    "minimum-stability": "dev"
 }
