--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "library",
     "require": {
         "guzzlehttp/guzzle": "^7.3.0",
-        "php": "^7.3|^8.0"
+        "php": "^8.0"
     },
     "license": "MIT",
     "autoload": {
