--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,9 @@
     "type": "library",
     "require": {
         "guzzlehttp/guzzle": "^7.3.0",
-        "php": "^8.0"
+        "php": "^8.0",
+        "illuminate/contracts": "^6.0|^8.0|^9.0|^10.0",
+        "illuminate/support": "^6.0|^8.0|^9.0|^10.0"
     },
     "license": "MIT",
     "autoload": {
